--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -18,8 +18,7 @@
     </tr>
   </table>
 
-  <input type="submit" value="login">
-  <input type="hidden" name="next" value="{{ next }}">
+  <input type="submit" value="Login">
 </form>
 
 {% endblock %}
