--- a/templates/users/logout.html
+++ b/templates/users/logout.html
@@ -1,1 +1,14 @@
-You've logged out.
+{% extends 'base.html' %}
+
+{% block title %} Logged Out {% endblock title %}
+
+{% block content %}
+
+<div class="container text-center">
+    <p class="display-4 mb-5">You've logged out.</p>
+    <a class="btn btn-danger" href="{% url 'user:register' %}">Log in again</a>
+    <a class="btn btn-success" href="{% url 'index' %}">Homepage</a>
+</div>
+
+{% endblock content %}
+
