--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,24 +1,29 @@
+{% extends 'base.html' %}
+
+{% block title %} Login {% endblock title %}
+
 {% block content %}
 
-{% if form.errors %}
-<p>Please fill-up the form according to the instructions.</p>
-{% endif %}
+<div class="container text-center">
+  <p class="display-4">Login</p>
+  <form method="post" action="{% url 'user:login' %}">
+    {% csrf_token %}
+    <div>
+      {{ form.username.label_tag }}
+      <div class="mb-3">
+        {{ form.username }}
+      </div>
+    </div>
 
-<form method="post" action="{% url 'user:login' %}">
-  {% csrf_token %}
-
-  <table>
-    <tr>
-      <td>{{ form.username.label_tag }}</td>
-      <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-      <td>{{ form.password.label_tag }}</td>
-      <td>{{ form.password }}</td>
-    </tr>
-  </table>
-
-  <input type="submit" value="Login">
-</form>
+    {{ form.password.label_tag }}
+    <div class="mb-3">
+      {{ form.password }}
+    </div>
+    {% if form.errors %}
+      <p class="text-danger">Username or password incorrect</p>
+    {% endif %}
+    <input class="form-input btn btn-success" type="submit" value="Login">
+  </form>
+</div>
 
 {% endblock %}
