--- a/templates/users/newsfeed.html
+++ b/templates/users/newsfeed.html
@@ -1,32 +1,70 @@
-<h1>Newsfeed</h1>
+{% extends 'base.html' %}
 
-{% for article in object_list %}
-    <ul>
-        <li>{{ article.title }}</li>
-        <li>{{ article.author }}</li>
-        <li>{{ article.description }}</li>
-        <li>{{ article.url }}</li>
-        <li>{{ article.url_to_image }}</li>
-        <li>{{ article.published_at }}</li>
-        <li>{{ article.content }}</li>
-        <li>{{ article.source.source }}</li>
-    </ul>
-{% endfor %}
+{% block title %} Newsfeed {% endblock title %}
 
-<div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-        {% endif %}
+{% block content %}
+    <div class="container">
+        <p class="display-4">Articles</p>
+        <a href="{% url 'user:home' %}"class="">Home</a>
+        -
+        <a href="{% url 'user:settings' %}"class="">Settings</a>
+        <br>
 
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-        </span>
+        <div class="mt-3">
+            {% for article in object_list %}
+            <div class="border mb-3">
+                <div class="row g-0">
+                    <div class="col-md-2">
+                        <img style="max-height:100%; max-width:100%;" class="p-3" src="{{ article.url_to_image }}" alt="article-image"></img>
+                        <p class="card-text h6 text-center">
+                            {{ article.published_at }}
+                        </p>
+                    </div>
+                    <div class="col">
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                {{ article.title }}
+                            </h4>
+                            <p class="card-text fst-bold">
+                                <small class="text-muted">
+                                    {% if article.author %}{{ article.author }} · {% endif %}
+                                    {{ article.source.source }}
+                                </small>
+                            </p>
+                            <p class="card-text fst-italic">
+                                {{ article.description }}
+                            </p>
+                            <p class="card-text">
+                                {{ article.content }} <a href="{{ article.url }}">continue reading.</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% empty %}
+                No news articles to display. Please check your
+                <a href="{% url 'user:settings' %}">settings</a>
+            {% endfor %}
+        </div>
 
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-        {% endif %}
-    </span>
-</div>
+        <div class="pagination mt-5 mb-5">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; First</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                {% endif %}
+
+                {% if object_list.count > 0 %}
+                    <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                    </span>
+                {% endif %}
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">Next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+    </div>
+{% endblock content %}
