--- a/templates/users/newsfeed.html
+++ b/templates/users/newsfeed.html
@@ -8,6 +8,8 @@
         <a href="{% url 'user:home' %}"class="">Home</a>
         -
         <a href="{% url 'user:settings' %}"class="">Settings</a>
+        -
+        <a class="btn btn-danger" href="{% url 'user:logout' %}">Logout</a>
         <br>
 
         <div class="mt-3">
