Add source country to newsfeed template

--- a/templates/users/newsfeed.html
+++ b/templates/users/newsfeed.html
@@ -21,6 +21,12 @@
                         <p class="card-text h6 text-center">
                             {{ article.published_at }}
                         </p>
+
+                        <p class="card-text h6 text-center mb-2">
+                        {% if article.source.country %}
+                            Country: {{ article.source.country }}
+                        {% endif %}
+                        </p>
                     </div>
                     <div class="col">
                         <div class="card-body">
